[package]
name = "unixtract"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
lz4 = "1.23.1"
lzma-rs = "0.3"
aes = "0.8.4"
cbc = "0.1.2"
md5 = "0.7"
sha1 = "0.10"
flate2 = "1.0"
rsa = { version = "0.9", features = ["hazmat"] }
hex = "0.4"
ecb = "0.1"
tar = "0.4.44"
binrw = "0.15"